Work-log.txt
1、
时间:2018.7.13
问题:笔记本电脑在没有无线网络连接时，如何与虚拟机连接？
解答:背景：笔记本只有无线网卡，安装vbox后，虚拟机的网络->连接方式选择了桥接网卡，界面名称选择了无线网卡，虚拟机与宿主机均可上网，且宿主机可通过xshell登录虚拟机，
     Ip为无线网络分配的IP。
     但在没有无线网络时，宿主机如何登录虚拟机？
	 这时，想到了给虚拟机添加一块host-only模式的网卡，
	 具体配置如下：在vbox管理->主机网络管理器->创建了一个Virtual Box Host-Only Ethernet adapter#2这么一块网卡，该块网卡配置比较简单，可选静态也可选择DHCP
	 然后，在具体某个虚拟机的设置->网络->可以选择网卡2，连接方式host-only，界面名称 Virtual Box Host-Only Ethernet adapter#2，网卡1的配置可不变，修改完配置后
	 启动虚拟机，这时，可以看到虚拟机中出现了两块网卡，其中一块为Virtual Box Host-Only Ethernet adapter#2，它的IP因为配置了dhcp所以与宿主机在同一网段，ping宿主机
	 可能ping不同，因为宿主机开启了防火墙，这时宿主机使用xshell可以登录虚拟机，问题解决。
2、
时间:2018.7.16
日志：今天入职第一天，直真马骁向我介绍了苏研的系统，现对系统总结如下：
      苏研的云平台产品基于OpenStack进行二次开发，OpenStack是一个云操作系统，通过一组相关的服务提供一个基础设施即服务(IaaS)解决方案，管理计算、存储、网络等资源（与单机版操作
	  系统功能类似）。
	  从四个部分去认识苏研的云平台，软件架构、硬件部署、网络SDN、呈现（界面）
	  1、呈现：与业务用户直接进行交互，用于用户日常开展业务、进行运维等。
	  分为三个平台运营平台、自服务平台、运维平台
	  运营平台（OP）主要由中国移动的业务用户使用，可进行配置资源并基于云平台开展业务，其开展的业务包括售卖虚拟资源，包括计算、存储、网络等。
	  运维平台（CLM）主要由运维人员使用，对平台运行状态进行监控，包括虚拟机和物理机内存、硬盘、cpu等，及网络带宽。
	  自服务平台主要由从中国移动购买资源的最终用户使用，根据其具体业务调配归属于自己的各种资源。
	  OP、CLM、自服务平台统称EPC
	  2、苏研产品软件架构
	  苏研的软件产品主要分为BCEC、CLM（CLoudMaster）、EBS、Onest、Vn、SDS六部分
	  BCEC对应OpenStack-Nova服务，虚拟机管理
	  EBS对应OpenStack-Cinder服务，块存储管理，虚拟机存储管理（虚拟机的硬盘）
	  Onest对应OpenStack-Swift服务，对象存储（云存储），类似网盘、云盘功能
	  Vn对应OpenStack-Neutron服务 虚拟网络管理
	  CLM运维管理平台
	  界面等对应OpenStack-Horizon服务
	  3、硬件架构
	  熟悉网络拓扑
	  4、SDN
	  查看SDN相关资料
3、
时间:2018.7.17
日志:（1）虚拟机桥接网卡，在虚拟机中分配不到IP，尝试修改了一下设置->网络->高级>控制芯片的设置，然后虚拟机分配到了。
     （2）虚拟机第二块网卡使用的host-only模式，在虚拟机无其配置文件，使用 IP addr 命令获取MAC地址，nmcli con show 获取uuid，然后将eth0的配置文件复制一个为eth1
	      路径centos是/etc/sysconfig/network-scripts/ifcfg-eth*,注意里面的MAC地址和UUID配置对了，不要写错，还有device和name也不要写错。如果配置静态IP，记得关掉BOOTPROTO=DHCP选项
4、时间：2018.7.18
日志:任何割接都要把割接之前的状态进行记录，统一测试用例，与割接后状态进行比对。
5、时间：2018.7.19
日志：（1）今天和高粱过了一下网络拓扑，明白了DMZ区主要作用等
6、时间：2018.7.20
日志：今天香港这边电源割接，我配合在割接结束后对系统进行巡检，经赵天伟培训先巡检流程如下
    (1)、ping服务器
	 登录10.250.54.10、10.250.54.14、10.250.54.21、10.250.54.24，执行/root/pingall.sh
	 其中14是EC的服务器，21是EBS的服务器，24是Onest服务器，服务器密码是Bcec@2017
	(2)、登录dashboard界面
	 10.250.54.100/dashboard
     查看主机集合、虚拟机管理两个页面，看是否有异常
	(3)、执行nova list命令
	登录10.250.54.10，然后执行. /root/admin-openrc.sh 然后执行nova service-list
	查看state是否均为up
	(4)、登录界面查看EBS和Onest状态
	 10.250.54.21:6680
	 10.250.54.24:6680
	 查看硬件管理每个节点看下是否有异常
	(5)、查看SDN状态
	 登录10.250.54.40:8080，查看控制器 应用管理和控制器信息 页面
	(6)、查看EPC页面状态
	登录https://10.0.6.10:30104、https://10.0.6.10:30103、https://10.0.6.10:30102界面，每个链接都点点看是否有异常。
7、时间：2018.8.3
日志：解决马泽亚提出负载均衡无法生效的问题
   (1)、可以使用telnet IP 端口 测试端口是否打开
   (2)、firewall-cmd --state 查看firewall是否运行
        systemctl stop firewalld.service 关闭firewall  	
   (2)、yum install httpd   安装httpd
        service httpd start 启动httpd
		service httpd stop  停止httpd
		其默认网站路径，/var/www/html/     
		默认80端口
   (3)、yum install tomcat  安装tomcat
        yum install tomcat-webapps tomcat-admin-webapps 安装管理界面，只有装了这个才可以看到默认那个页面
        默认网站路径/usr/share/tomcat/webapps
        /usr/share/tomcat/conf/server.xml可修改端口号，路径等
   (4)、通过这个问题，在没有思路的情况下，先把客户的问题走几遍，熟悉业务流程，通过走几遍流程，通过求同法、求异法，发现一些蛛丝马迹，大胆假设，得出一些设想，
        再通过实验验证这些设想是否导致问题的发生。
  （5）、在接触新东西的时候，可以先熟悉流程入手，看看一件事都经过了哪些步骤，哪些人。

8、时间：2018.8.1
日志：上周五香港IT部门找到了3389端口无法访问的原因，他们的ddos检测将3389流量识别为可疑流量。
      通过解决该问题学到了telnet Ip 端口，可以检查端口是否起了。
	  通过这个问题，回忆了tcp三次握手的过程，排查问题的思路，思路是从抓包看数据流如何抵达双方的。
9、时间:2018.8.16
日志：马泽亚提出有虚拟机既要访问公网，也要访问私网
 david，私网无法访问的原因，初步定为是绑定了两块网卡，在虚拟机的路由表都生成为默认路由，导致要么公网通，要么是私网通，
我下午用测试账号做了一个测试，对于这个问题，要做如下操作
   (1)、解绑绑定的弹性IP；
   (2)、解绑网卡；
   (3)、重新绑定虚拟机网卡，先绑定上公网的网卡，再绑定去IT私网的网卡；
   (4)、将去IT私网的路由写入虚拟机路由表，命令如下
         route add -net 10.0.7.0/24 gw 172.16.0.1
         route add -net 172.16.0.0/24 gw 172.16.0.1
   
   (5)、上面的命令服务器重启会失效，可以将此路由写入到/etc/sysconfig/static-routes文件中，然后如果服务器重启，执行service network restart将路由信息写入路由表
10、时间：2018.8.24
日志：centos配置DNS /etc/resolv.conf   增加nameserver 8.8.8.8
11、时间：2018.8.24
日志：安装python3.0 可参考这个链接https://www.cnblogs.com/FZfangzheng/p/7588944.html 或 https://www.cnblogs.com/Mr-wangxd/p/7028285.html
   (1)、安装依赖包
   (2)、wget 下载python源码
   (3)、tar -xvjf 解压源码
   (4)、./configure
   (5)、make
   (6)、make install 
   (7)、创建软链接(类似windows下的快捷方式)
        ln -s /usr/local/python3/bin/python3 /usr/bin/python3
        ln -s /usr/local/python3/bin/pip3 /usr/bin/pip3   
12、时间：2018.8.24 
日志：安装python3后，yum会报错，会提示  “File "/usr/bin/yum", line 30 except KeyboardInterrupt, e:
                                   ^SyntaxError: invalid syntax”
								   是因为yum用2.7版本写的，兼容性有问题，
      将/usr/bin/yum 中 #!/usr/bin/python改为 #!/usr/bin/python2.7
       如果报 /usr/libexec/urlgrabber-ext-down 同理  zenjia
13、时间:2018.8.24
日志:
    1、第一次拉远程仓库使用git clone
    2、后续使用git pull 从远程库拉取更新
	一般git的流程
	1、git add 文件名 //将修改从工作区提交到暂存区，撤回需要checkout
	2、git commit -m "修改说明"//将修改从暂存区提交到版本库
	3、git push//从本地版本库提交到远程github版本库
14、时间：2018.10.3
日志：查询bgp路由条数
    1、使用crt登录10.250.54.3
	2、stelnet 192.168.239.225 U：huawei p:BCzq@2017!
	3、执行display bgp routing-table命令 
	   结果中的Total Number of Routes : **** (2018-10-03的数字是720209)是记录条数
15、时间：2018.10.23
日志：
    1、如何登录EPC节点，从10.250.54.10(服务器名con08) ssh root@10.0.6.10 P:Bcec@2017
    2、登录mysql  mysql -uroot -pEpic2wsx@WSX
	3、常用命令 desc tablename表结构; show create table tablename建表语句;
	4、glance image-list查看底层的镜像
16、时间：2018.10.25
日志：centos7下安装完httpd后，也在/var/www/html/下新建了index.html文件,本地curl localhost可以访问，但远程无法访问
    1、查看selinux状态
    2、/etc/httpd/conf/http.conf中#ServerName www.example.com:80 可选
	3、centos防火墙关闭是 主要是因为这点导致此问题的
	   systemctl stop firewalld.service
	   systemctl disable firewalld.service
	   

	  

17、IPMI默认地址192.168.2.100 用户名root P:Huawei12#$
     按del进bios
	 ipmi界面远程控制
	 1、raid
	 ctrl+c进入raid卡配置界面
	 2、分区文件系统类型等按照默认


	  
         
18、用IPMI装系统时，无法连接虚拟光驱，报“虚拟机镜像文件正在使用”，
    查看该服务器的在线用户，发现有一个用户连接始终无法释放，怀疑和这个有关，界面无法把它踢下去，后来讲IPMI恢复出厂设置
19、某台服务器使用KVM工具无法引导至安装界面，在IPMI界面修改了启动项，改为用光驱启动，后在服务器重启时按F11选择光驱，后进入安装界面









